--- a/Client/App.config
+++ b/Client/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
@@ -6,24 +6,27 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="fileBinding" sendTimeout="24.00:00:00" maxReceivedMessageSize="26214400"
-                    messageEncoding="Mtom" />
+                <binding name="fileBinding" sendTimeout="24.00:00:00" maxReceivedMessageSize="26214400" messageEncoding="Mtom" />
             </basicHttpBinding>
             <netTcpBinding>
                 <binding name="NetTcpBinding_Chat" />
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
-                name="NetTcpBinding_Chat">
+            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat" name="NetTcpBinding_Chat">
                 <identity>
                     <userPrincipalName value="HP-EliteBook\Elman" />
                 </identity>
             </endpoint>
-            <endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
-                bindingConfiguration="fileBinding" contract="ChatService.File"
-                name="fileBinding" />
+            <endpoint address="http://localhost:8301/File" binding="basicHttpBinding" bindingConfiguration="fileBinding" contract="ChatService.File" name="fileBinding" />
         </client>
     </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="ControlzEx" publicKeyToken="69f1c32f803d307e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
