--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -169,42 +169,42 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\ClientUserInfo.cs" />
+    <Compile Include="UserControls\LoadingUserControl.xaml.cs">
+      <DependentUpon>LoadingUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Utility\Command.cs" />
+    <Compile Include="Utility\FileHelper.cs" />
     <Compile Include="ViewModels\AvailableUsersViewModel.cs" />
+    <Compile Include="ViewModels\EntranceViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\EntranceWindow.xaml.cs">
+      <DependentUpon>EntranceWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UCSettings.xaml.cs">
       <DependentUpon>UCSettings.xaml</DependentUpon>
     </Compile>
-    <Page Include="EntranceWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ClientUserInfo.cs" />
-    <Compile Include="Command.cs" />
     <Compile Include="Connected Services\ChatService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="EntranceWindow.xaml.cs">
-      <DependentUpon>EntranceWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Page Include="letsTalkControls\ButtonEllipseStyle.xaml">
+    <Page Include="UserControls\LoadingUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="letsTalkControls\ListBoxUsersStyle.xaml">
+    <Page Include="Views\EntranceWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="letsTalkControls\LoadingControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="letsTalkWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -216,15 +216,16 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="WindowResources\ButtonEllipseStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowResources\ListBoxUsersStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="letsTalkControls\LoadingControl.xaml.cs">
-      <DependentUpon>LoadingControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="letsTalkWindow.xaml.cs">
-      <DependentUpon>letsTalkWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MainViewModel.cs" />
     <Compile Include="Views\UCAvailableUsers.xaml.cs">
       <DependentUpon>UCAvailableUsers.xaml</DependentUpon>
     </Compile>
@@ -304,5 +305,6 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
