--- a/Client/App.config
+++ b/Client/App.config
@@ -6,19 +6,29 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="fileBinding" sendTimeout="24.00:00:00" maxReceivedMessageSize="26214400" messageEncoding="Mtom" />
+                <binding name="fileBinding" sendTimeout="24.00:00:00" maxReceivedMessageSize="26214400"
+                    messageEncoding="Mtom" />
+                <binding name="BasicHttpBinding_File" messageEncoding="Mtom" />
             </basicHttpBinding>
             <netTcpBinding>
-                <binding name="NetTcpBinding_Chat" />
+                <binding name="NetTcpBinding_Chat">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat" name="NetTcpBinding_Chat">
+            <endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
+                bindingConfiguration="fileBinding" contract="ChatService.File"
+                name="fileBinding" />
+            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
+                name="NetTcpBinding_Chat">
                 <identity>
-                    <userPrincipalName value="HP-EliteBook\Elman" />
+                    <userPrincipalName value="LAPTOP-39BIREFL\user" />
                 </identity>
             </endpoint>
-            <endpoint address="http://localhost:8301/File" binding="basicHttpBinding" bindingConfiguration="fileBinding" contract="ChatService.File" name="fileBinding" />
         </client>
     </system.serviceModel>
   <runtime>
