Added: 1) "StreamExceptionFault" is needed if an error occurred while sending a file from client to server 2) Several methods have been added to the IChatService interface, the GetUsers method has been implemented, which will load existing users to the client, also existing users will be sent to the client according to a certain amount (the "count" parameter is needed to get a new certain number of users from the Sql table , "offset" - offsets from the beginning in the Sql-table of users) Fixes: 1) App.config of the client was fixed, which added unnecessary additional endpoint 2) Corrections in the code of the Client project (The MakeRegister method was returned). 3) The sentTimeot has also been changed (it used to be 24 hours, now the stream can be kept up to 10 minutes)

--- a/Client/App.config
+++ b/Client/App.config
@@ -6,29 +6,24 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="fileBinding" sendTimeout="24.00:00:00" maxReceivedMessageSize="26214400"
+                <binding name="fileBinding" sendTimeout="00:10:00" maxReceivedMessageSize="26214400"
                     messageEncoding="Mtom" />
-                <binding name="BasicHttpBinding_File" messageEncoding="Mtom" />
             </basicHttpBinding>
             <netTcpBinding>
-                <binding name="NetTcpBinding_Chat">
-                    <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
+                <binding name="NetTcpBinding_Chat" />
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
-                bindingConfiguration="fileBinding" contract="ChatService.File"
-                name="fileBinding" />
             <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
                 name="NetTcpBinding_Chat">
                 <identity>
-                    <userPrincipalName value="LAPTOP-39BIREFL\user" />
+                    <userPrincipalName value="HP-EliteBook\Elman" />
                 </identity>
             </endpoint>
+            <endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
+                bindingConfiguration="fileBinding" contract="ChatService.File"
+                name="fileBinding" />
         </client>
     </system.serviceModel>
   <runtime>
