--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -169,6 +169,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\AvailableUser.cs" />
     <Compile Include="Models\ClientUserInfo.cs" />
     <Compile Include="UserControls\LoadingUserControl.xaml.cs">
       <DependentUpon>LoadingUserControl.xaml</DependentUpon>
