--- a/Client/packages.config
+++ b/Client/packages.config
@@ -3,6 +3,8 @@
   <package id="ControlzEx" version="5.0.0" targetFramework="net471" />
   <package id="MahApps.Metro" version="2.4.4" targetFramework="net471" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net471" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net471" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net471" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net471" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net471" />
 </packages>
