--- a/Client/App.config
+++ b/Client/App.config
@@ -8,21 +8,27 @@
             <basicHttpBinding>
                 <binding name="fileBinding" sendTimeout="00:10:00" maxReceivedMessageSize="26214400"
                     messageEncoding="Mtom" />
+                <binding name="BasicHttpBinding_File" messageEncoding="Mtom" />
             </basicHttpBinding>
             <netTcpBinding>
-                <binding name="NetTcpBinding_Chat" />
+                <binding name="NetTcpBinding_Chat">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8301/File" binding="basicHttpBinding" bindingConfiguration="fileBinding" contract="ChatService.File" name="fileBinding" />
-            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat" name="NetTcpBinding_Chat">
-                <identity>
-                    <userPrincipalName value="HP-EliteBook\Elman" />
-                </identity>
-            </endpoint>
             <endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
                 bindingConfiguration="fileBinding" contract="ChatService.File"
                 name="fileBinding" />
+            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
+                name="NetTcpBinding_Chat">
+                <identity>
+                    <userPrincipalName value="LAPTOP-39BIREFL\user" />
+                </identity>
+            </endpoint>            
         </client>
     </system.serviceModel>
   <runtime>
