Big update  New methods have been added and implemented that are related to 1) sending / uploading files from the chatroom. 2) Connect / disconnect have been completely redesigned. Now connected clients are stored on the server in a different structure. 3) Synchronization elements are now provided. 4) Callbacks were created, which must be implemented on the client, the server has their calls. 5) Now the Chatrum table works in a bunch of Contents, where messages are saved in an XML file and sent to the client based on ServiceMessage objects. 6) Implemented methods that are related to adding, creating, deleting, exiting a client in chat rooms. 7) Also added new procedures, functions and user-defined type to SQLSERVER. 8) The ConnectedUser class has been created, in which IChatCallback is located, which allows you to provoke calls to callback methods.
!ToolTip: Each client, when connected to the server, has a specific OperationContext on the server, from which callbacks are called to the necessary users (connected users at a certain moment)

Fixes: change of some code, provision of synchronization.

--- a/letsTalk/ServiceWCF.csproj
+++ b/letsTalk/ServiceWCF.csproj
@@ -53,9 +53,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatService.cs" />
+    <Compile Include="ConnectedUser.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="IChatService.cs" />
     <Compile Include="IFileService.cs" />
+    <Compile Include="ServiceMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerUserInfo.cs" />
   </ItemGroup>
