Some fixes. Also methods were taken from IChatService and rewritten in IUnitService (the same situation is IFileService / IAvatarService).

--- a/Client/App.config
+++ b/Client/App.config
@@ -8,27 +8,30 @@
             <basicHttpBinding>
                 <binding name="fileBinding" sendTimeout="00:10:00" maxReceivedMessageSize="26214400"
                     messageEncoding="Mtom" />
-                <binding name="BasicHttpBinding_File" messageEncoding="Mtom" />
+                <binding name="BasicHttpBinding_Avatar" messageEncoding="Mtom" />
             </basicHttpBinding>
             <netTcpBinding>
-                <binding name="NetTcpBinding_Chat">
-                    <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
+                <binding name="NetTcpBinding_Chat" />
+                <binding name="NetTcpBinding_Unit" />
             </netTcpBinding>
         </bindings>
         <client>
+            <endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
+                name="NetTcpBinding_Chat" />
+            <endpoint address="net.tcp://localhost:8302/Unit" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_Unit" contract="ChatService.Unit"
+                name="NetTcpBinding_Unit">
+                <identity>
+                    <userPrincipalName value="HP-EliteBook\Elman" />
+                </identity>
+            </endpoint>
             <endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
                 bindingConfiguration="fileBinding" contract="ChatService.File"
                 name="fileBinding" />
-            <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
-                name="NetTcpBinding_Chat">
-                <identity>
-                    <userPrincipalName value="LAPTOP-39BIREFL\user" />
-                </identity>
-            </endpoint>            
+            <endpoint address="http://localhost:8301/Avatar" binding="basicHttpBinding"
+                bindingConfiguration="fileBinding" contract="ChatService.Avatar"
+                name="fileBinding" />
         </client>
     </system.serviceModel>
   <runtime>
