--- a/Server/App.config
+++ b/Server/App.config
@@ -1,49 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
+  </startup>
 
-	<system.serviceModel>
-		<bindings>
-			<basicHttpBinding>
-				<binding name="fileBinding"
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="fileBinding"
 													maxReceivedMessageSize="26214400"
 													messageEncoding="Mtom"
-													transferMode="Streamed" 
+													transferMode="Streamed"
 													sendTimeout="00:10:00"
 													/>
-			</basicHttpBinding>
-		</bindings>
-		<behaviors>
-			<serviceBehaviors>
-				<behavior name="mexBeh">
-					<serviceMetadata httpGetEnabled="true" />
-					<serviceDebug includeExceptionDetailInFaults="true" />
-				</behavior>
-			</serviceBehaviors>
-		</behaviors>
-		<services>
-			<service name="letsTalk.ChatService" behaviorConfiguration="mexBeh">
-				
-				<endpoint address="" binding="netTcpBinding" contract="letsTalk.IChatService" />
-				
-				<endpoint address="File"
-														binding="basicHttpBinding" 
-														bindingConfiguration="fileBinding"
-														contract="letsTalk.IFileService"/>
-				
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-				
-				<host>
-					<baseAddresses>
-						<add baseAddress="http://localhost:8301" />
-						<add baseAddress="net.tcp://localhost:8302"/>
-					</baseAddresses>
-				</host>
-			</service>
-		</services>
-	</system.serviceModel>
+      </basicHttpBinding>
+    </bindings>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="mexBeh">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <services>
+      <service name="letsTalk.ChatService" behaviorConfiguration="mexBeh">
+
+        <endpoint address="Chat" binding="netTcpBinding" contract="letsTalk.IChatService" />
+
+        <endpoint address="Unit" binding="netTcpBinding" contract="letsTalk.IUnitService"/>
+        
+        <endpoint address="File"
+									binding="basicHttpBinding"
+									bindingConfiguration="fileBinding"
+									contract="letsTalk.IFileService"/>
+
+        <endpoint address="Avatar"
+                  binding="basicHttpBinding"
+                  bindingConfiguration="fileBinding"
+                  contract="letsTalk.IAvatarService"/>
+
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8301" />
+            <add baseAddress="net.tcp://localhost:8302"/>
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
 
 
 </configuration>
