--- a/letsTalk/app.config
+++ b/letsTalk/app.config
@@ -1,46 +1,54 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <system.serviceModel>
-					<bindings>
-						<basicHttpBinding>
-							<binding name="FileServiceBinding"
-																transferMode="Streamed"
-																messageEncoding="Mtom"
-																maxReceivedMessageSize="26214400" 
-																sendTimeout="00:10:00" />
-						</basicHttpBinding>
-					</bindings>
-        <behaviors>
-            <serviceBehaviors>
-                <behavior name="">
-                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-                    <serviceDebug includeExceptionDetailInFaults="true" />
-                </behavior>
-            </serviceBehaviors>
-        </behaviors>
-        <services>
-            <service name="letsTalk.ChatService">
-                
-													<endpoint address="" binding="basicHttpBinding" contract="letsTalk.IChatService">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
-                
-													<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-													
-																<endpoint name ="File"
-																										address="File" 
-																										binding="basicHttpBinding"
-																										bindingConfiguration="FileServiceBinding"
-																										contract="letsTalk.IFileService"/>
-													
-                <host>
-                    <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/letsTalk/ChatService/" />
-                    </baseAddresses>
-                </host>
-            </service>
-        </services>
-    </system.serviceModel>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="FileServiceBinding"
+                          transferMode="Streamed"
+                          messageEncoding="Mtom"
+                          maxReceivedMessageSize="26214400"
+                          sendTimeout="00:10:00" />
+      </basicHttpBinding>
+    </bindings>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <services>
+      <service name="letsTalk.ChatService">
+
+        <endpoint address="Chat" binding="basicHttpBinding" contract="letsTalk.IChatService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+
+        <endpoint address="Unit" binding="basicHttpBinding" contract="letsTalk.IUnitService"/>
+        
+        <endpoint name ="File"
+                  address="File"
+                  binding="basicHttpBinding"
+                  bindingConfiguration="FileServiceBinding"
+                  contract="letsTalk.IFileService"/>
+
+        <endpoint name="Avatar"
+                  address="Avatar"
+                  binding="basicHttpBinding"
+                  bindingConfiguration="FileServiceBinding"
+                  contract="letsTalk.IAvatarService"/>
+
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/letsTalk/ChatService/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
