--- a/letsTalk/ServiceWCF.csproj
+++ b/letsTalk/ServiceWCF.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Exceptions.cs" />
     <Compile Include="IChatService.cs" />
     <Compile Include="IFileService.cs" />
+    <Compile Include="IUnitService.cs" />
     <Compile Include="ServiceMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerUserInfo.cs" />
