Added added delegeta for calling MainViewModel methods from another VIewModel cllases (add Chat into Chats collection) 2 viewmodel for adding friend and group 2 views for adding friend and group
Changed
Display  of user controls (each option item from hamburger menu has its own command)
CreateChatroom (from void to return int)

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -202,17 +202,20 @@
     <Compile Include="ViewModels\ChatViewModel.cs" />
     <Compile Include="ViewModels\EntranceViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\AddUser.xaml.cs">
+      <DependentUpon>AddUser.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddUserUC.xaml.cs">
+      <DependentUpon>AddUserUC.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CreateGroupUC.xaml.cs">
+      <DependentUpon>CreateGroupUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\EntranceWindow.xaml.cs">
       <DependentUpon>EntranceWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UC2.xaml.cs">
-      <DependentUpon>UC2.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UCAddUser.xaml.cs">
-      <DependentUpon>UCAddUser.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UCChat.xaml.cs">
       <DependentUpon>UCChat.xaml</DependentUpon>
@@ -243,19 +246,23 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\AddUser.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AddUserUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CreateGroupUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\EntranceWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MainWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UC2.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UCAddUser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
