Added in the client: 1) LoadChatroomsAsync -> in asynchronous mode loads chatrooms, their names and IDs, and also calls the asynchronous avatar download method 2) DownloadAvatarAsync was implemented in Chat which uses polymorphism
Added in the server:
1) Now the AvatarDownload / Upload method has been split into Chat / UserAvatarDownload
2) Small changes in sql code
3) Added class Chat and User

--- a/letsTalk/ServiceWCF.csproj
+++ b/letsTalk/ServiceWCF.csproj
@@ -52,6 +52,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chat.cs" />
     <Compile Include="ChatService.cs" />
     <Compile Include="ConnectedUser.cs" />
     <Compile Include="Exceptions.cs" />
