--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -342,7 +342,10 @@
     </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
     <None Include="Connected Services\ChatService\ChatService.wsdl" />
-    <None Include="Connected Services\ChatService\Client.ChatService.AvatarUploadResponse.datasource">
+    <None Include="Connected Services\ChatService\Client.ChatService.ChatAvatarUploadResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChatService\Client.ChatService.Chatroom.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\ChatService\Client.ChatService.DownloadFileInfo.datasource">
@@ -358,6 +361,12 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\ChatService\Client.ChatService.ServiceMessage1.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChatService\Client.ChatService.UserAvatarUploadResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChatService\Client.ChatService.UserInChat.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\ChatService\item.wsdl" />
