Now the Disconnect method does not need to be called in the client, the server itself understands when to release the channel of the client, disconnected by authorized or suddenly.

--- a/Server/App.config
+++ b/Server/App.config
@@ -6,6 +6,11 @@
 
   <system.serviceModel>
     <bindings>
+      <netTcpBinding>
+        <binding name="sessionChecker">
+          <reliableSession inactivityTimeout="00:01:00"/>
+        </binding>
+      </netTcpBinding>
       <basicHttpBinding>
         <binding name="fileBinding"
 													maxReceivedMessageSize="26214400"
@@ -26,7 +31,7 @@
     <services>
       <service name="letsTalk.ChatService" behaviorConfiguration="mexBeh">
 
-        <endpoint address="Chat" binding="netTcpBinding" contract="letsTalk.IChatService" />
+        <endpoint address="Chat" bindingConfiguration="sessionChecker" binding="netTcpBinding" contract="letsTalk.IChatService" />
 
         <endpoint address="Unit" binding="netTcpBinding" contract="letsTalk.IUnitService"/>
         
