UPDATED DataTemplates for all kind of Messages 1.added download icons 2.added avatars for GroupMessages

--- a/Client/App.config
+++ b/Client/App.config
@@ -1,42 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
-  </startup>
-  <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_Avatar" messageEncoding="Mtom" />
-        <binding name="fileBinding" sendTimeout="00:10:00" maxReceivedMessageSize="26214400"
-          messageEncoding="Mtom" />
-        <binding name="BasicHttpBinding_File" messageEncoding="Mtom" />
-      </basicHttpBinding>
-      <netTcpBinding>
-        <binding name="NetTcpBinding_Chat" />
-        <binding name="NetTcpBinding_Unit" />
-      </netTcpBinding>
-    </bindings>
-    <client>
-      <endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding"
-        bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
-        name="NetTcpBinding_Chat" />
-      <endpoint address="net.tcp://localhost:8302/Unit" binding="netTcpBinding"
-        bindingConfiguration="NetTcpBinding_Unit" contract="ChatService.Unit"
-        name="NetTcpBinding_Unit" />
-      <endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
-        bindingConfiguration="fileBinding" contract="ChatService.File"
-        name="fileBinding" />
-      <endpoint address="http://localhost:8301/Avatar" binding="basicHttpBinding"
-        bindingConfiguration="fileBinding" contract="ChatService.Avatar"
-        name="fileBinding" />
-    </client>
-  </system.serviceModel>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="ControlzEx" publicKeyToken="69f1c32f803d307e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
+	</startup>
+	<system.serviceModel>
+		<bindings>
+			<basicHttpBinding>
+				<binding name="BasicHttpBinding_Avatar" messageEncoding="Mtom" />
+				<binding name="fileBinding" sendTimeout="00:10:00" maxReceivedMessageSize="26214400"
+				  messageEncoding="Mtom" />
+				<binding name="BasicHttpBinding_File" messageEncoding="Mtom" />
+			</basicHttpBinding>
+			<netTcpBinding>
+				<binding name="NetTcpBinding_Chat" />
+				<binding name="NetTcpBinding_Unit" />
+			</netTcpBinding>
+		</bindings>
+		<client>
+			<endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding"
+			  bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
+			  name="NetTcpBinding_Chat" />
+			<endpoint address="net.tcp://localhost:8302/Unit" binding="netTcpBinding"
+			  bindingConfiguration="NetTcpBinding_Unit" contract="ChatService.Unit"
+			  name="NetTcpBinding_Unit" />
+			<endpoint address="http://localhost:8301/File" binding="basicHttpBinding"
+			  bindingConfiguration="fileBinding" contract="ChatService.File"
+			  name="fileBinding" />
+			<endpoint address="http://localhost:8301/Avatar" binding="basicHttpBinding"
+			  bindingConfiguration="fileBinding" contract="ChatService.Avatar"
+			  name="fileBinding" />
+			<endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding"
+			  bindingConfiguration="NetTcpBinding_Chat1" contract="ChatService.Chat"
+			  name="NetTcpBinding_Chat1">
+				<identity>
+					<userPrincipalName value="LAPTOP-39BIREFL\user" />
+				</identity>
+			</endpoint>
+		</client>
+	</system.serviceModel>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="ControlzEx" publicKeyToken="69f1c32f803d307e" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
