--- a/Client/App.config
+++ b/Client/App.config
@@ -19,7 +19,11 @@
 		<client>
 			<endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding"
 			  bindingConfiguration="NetTcpBinding_Chat" contract="ChatService.Chat"
-			  name="NetTcpBinding_Chat" />
+			  name="NetTcpBinding_Chat">
+				<identity>
+					<userPrincipalName value="LAPTOP-39BIREFL\user" />
+				</identity>
+			</endpoint>
 			<endpoint address="net.tcp://localhost:8302/Unit" binding="netTcpBinding"
 			  bindingConfiguration="NetTcpBinding_Unit" contract="ChatService.Unit"
 			  name="NetTcpBinding_Unit" />
@@ -29,13 +33,6 @@
 			<endpoint address="http://localhost:8301/Avatar" binding="basicHttpBinding"
 			  bindingConfiguration="fileBinding" contract="ChatService.Avatar"
 			  name="fileBinding" />
-			<endpoint address="net.tcp://localhost:8302/Chat" binding="netTcpBinding"
-			  bindingConfiguration="NetTcpBinding_Chat1" contract="ChatService.Chat"
-			  name="NetTcpBinding_Chat1">
-				<identity>
-					<userPrincipalName value="LAPTOP-39BIREFL\user" />
-				</identity>
-			</endpoint>
 		</client>
 	</system.serviceModel>
 	<runtime>
