--- a/Client/packages.config
+++ b/Client/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="5.0.0" targetFramework="net471" />
+  <package id="gong-wpf-dragdrop" version="2.3.2" targetFramework="net471" />
   <package id="MahApps.Metro" version="2.4.4" targetFramework="net471" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net471" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net471" />
