Copy entire Resource folder into DEBUG folder !!!!
ADDED
Edit button in GropChat
EditChatViewModel
EditChatWindow for adding new users use drag and drop

SearchCommand and SearchText for searching users when creating and editing group

Drag and Drop in CreateGroupUC
Drag and Drop in EditChatWindow

ScrollChanged for loading new messages when scroll up
LoaderVisibility for turn on/off loader when scroll

ValidationRulse is turned off so you can enter any login,password,name

Fixes in Settings
you can select wallpaper from device and default wallpapers
you can select message load count when scroll to up

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -214,6 +214,7 @@
     <Compile Include="ViewModels\AvailableUsersViewModel.cs" />
     <Compile Include="ViewModels\ChatViewModel.cs" />
     <Compile Include="ViewModels\EntranceViewModel.cs" />
+    <Compile Include="ViewModels\EditGroupViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="Views\AddUserUC.xaml.cs">
@@ -224,6 +225,9 @@
     </Compile>
     <Compile Include="Views\DefaultWallpaperWindow.xaml.cs">
       <DependentUpon>DefaultWallpaperWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EditGroupWindow.xaml.cs">
+      <DependentUpon>EditGroupWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EntranceWindow.xaml.cs">
       <DependentUpon>EntranceWindow.xaml</DependentUpon>
@@ -283,6 +287,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\EditGroupWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\EntranceWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -327,7 +335,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WindowResources\MessageDicitionary.xaml">
+    <Page Include="WindowResources\MessageDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
